[gd_scene load_steps=5 format=3 uid="uid://b3cv1g0a284mq"]

[ext_resource type="Texture2D" uid="uid://d4nvcsyb0ehtb" path="res://assets/sprites/CardDefaultFront.png" id="1_ho3ld"]
[ext_resource type="Script" path="res://src/menu/DeckPreview.gd" id="1_k0qju"]
[ext_resource type="Script" path="res://src/menu/DeckPreviewSelection.gd" id="3_0x34l"]
[ext_resource type="Material" uid="uid://d0yxq3hqqpj2p" path="res://assets/material/FocusMaterial.tres" id="4_aduyl"]

[node name="DeckPreview" type="MarginContainer" node_paths=PackedStringArray("deck_name", "card_count", "buildint", "texture_rect", "deck_description")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15
script = ExtResource("1_k0qju")
deck_name = NodePath("VBoxContainer/HBoxContainer/VBoxContainer/DeckName")
card_count = NodePath("VBoxContainer/HBoxContainer/VBoxContainer2/VBoxContainer/CardCounter")
buildint = NodePath("VBoxContainer/HBoxContainer/VBoxContainer2/VBoxContainer2/IsBuildIn")
texture_rect = NodePath("VBoxContainer/HBoxContainer/VBoxContainer/Control")
deck_description = NodePath("VBoxContainer/DeckDescription")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Control" type="TextureRect" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("1_ho3ld")
script = ExtResource("3_0x34l")
selection_material = ExtResource("4_aduyl")

[node name="DeckName" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "DECK_NAME"

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "DECK_INFO"

[node name="VBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "CARD_COUNT"

[node name="CardCounter" type="RichTextLabel" parent="VBoxContainer/HBoxContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "0"
fit_content = true

[node name="VBoxContainer2" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer2/VBoxContainer2"]
layout_mode = 2
text = "BUILT_IN"

[node name="IsBuildIn" type="RichTextLabel" parent="VBoxContainer/HBoxContainer/VBoxContainer2/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "No"
fit_content = true

[node name="DeckDescription" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "DESCRIPTION"
fit_content = true

[connection signal="deck_activate" from="." to="VBoxContainer/HBoxContainer/VBoxContainer/Control" method="activate"]
[connection signal="deck_unchecked" from="." to="VBoxContainer/HBoxContainer/VBoxContainer/Control" method="reset"]
